src/test/rustdoc-ui/doctest-edition.stderr
error: could not parse code block as Rust code
  --> $DIR/doctest-edition.rs:7:5
   |
LL |   //! ```
   |  _____^
LL | | //! foo'b'
LL | | //! ```
   | |_______^
   |
note: the lint level is defined here
  --> $DIR/doctest-edition.rs:3:9
   |
LL | #![deny(rustdoc::invalid_rust_codeblocks)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: error from rustc: prefix `foo` is unknown
help: mark blocks that do not contain Rust code as text
   |
LL | //! ```text
   |        ++++

error: aborting due to previous error

